<resources>
    <string name="app_name">CourseSelectingSystem</string>

    <!-- url -->

    <string name="fp_register_url">http://192.168.0.103:8080/SelectingSys/RegisterServlet</string>
    <string name="fp_login_url">http://192.168.0.103:8080/SelectingSys/LoginServlet</string>
    <string name="fp_addcourse_url">http://192.168.0.103:8080/SelectingSys/AddCourseServlet</string>
    <string name="fp_uploadfile_url">http://192.168.0.103:8080/SelectingSys/UplodFileServlet</string>
    <string name="fp_showcourselist_url">http://192.168.0.103:8080/SelectingSys/ShowCourseListServlet</string>
    <string name="fp_showmycourselist_url">http://192.168.0.103:8080/SelectingSys/ShowMyCourseServlet</string>
    <string name="fp_iscoursetaken_url">http://192.168.0.103:8080/SelectingSys/IsCrsTakenServlet</string>
    <string name="fp_addchoose_url">http://192.168.0.103:8080/SelectingSys/AddChooseServlet</string>


    <!--welcome-->
    <string name="made_by">Made By</string>
    <string name="name">于越（170811008）</string>
    <string name="myclass">2017级计算机科学与技术1班</string>
    <string name="signin">登录</string>
    <string name="new_user">新用户</string>

    <!-- register interface -->
    <string name="registertitle">注册</string>
    <string name="registerusernum">编号</string>
    <string name="registername">姓名</string>
    <string name="registerpswd">密码</string>
    <string name="registeridentify">身份</string>
    <string name="registerclass">班级</string>
    <string name="registerphone">联系方式</string>

    <!-- login interface -->
    <string name="tip_account">请输入用户名</string>
    <string name="tip_password">请输入密码</string>
    <string name="forget_pass">注册</string>
    <string name="title_activity_admin_func">AdminFuncActivity</string>
    <string name="title_home">申请课程</string>
    <string name="title_notifications">上传文件</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="stu_title_home">选择课程</string>
    <string name="stu_title_notifications">我的课程</string>

    <!-- teacher - add course interface -->
    <string name="crsname">课程名称</string>
    <string name="crsuplimit">课程人数</string>
    <string name="crsdescrip">课程简介</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="fg_course_name">课程名称：</string>
    <string name="fg_course_teacher">授课教师：</string>
    <string name="fg_course_descrip">课程简介：</string>
    <string name="fg_course_uplimit">课程人数：</string>
    <string name="fg_course_chosen">已选人数：</string>
    <string name="fg_course_btn">选择本课程</string>
</resources>
